--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://emjay03.github.io/Darkandlight",
+  "home": "https://emjay03.github.io/Darkandlightmode",
   "name": "darkandlightmode",
   "version": "0.1.0",
   "private": true,
